--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-"Hello world"
+<html>
+  <title>
+    First website
+  </title>
+  
+  <body>
+    <h1>José Fernando Guarín Montoya, Ph.D.</h1>
+  </body>
+  <style>
+    body {
+      background-color:green;
+      color:#fff;
+      text-align:center;
+    }
+    
+  </style>
+  
+  
+</html>
