--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   
   <body>
     <h1>José Fernando Guarín Montoya, Ph.D.</h1>
-    <h4>Profesor de Lechería UdeA</h4>
+    <h4>Profesor de Lechería especializada</h4>
+    <h4>Facultad de Ciencias Agrarias, Universidad de Antioquia</h4>
   </body>
   <style>
     body {
