--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div>
     
       <div>
-       <img src="img/profile.jpg" width="200"/> 
+       <img src="https://github.com/jozenerd/fernando.guarin.github.io/blob/master/DSC_0097.jpg" width="300"/> 
       <h1>José Fernando Guarín Montoya, Ph.D.</h1>
       <h2>Profesor de Lechería especializada</h2>
       <h4>Facultad de Ciencias Agrarias, Universidad de Antioquia</h4>
